Change text color

--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ html {
 
 .text-box {
   background-color: rgba(0, 0 ,0, 0.6);
-  color: #FFF;
+  color: rgb(203, 203, 203);
   padding: 40px;
   font-size: 1.5em;
   /*margin-top: 20px;
