--- a/main.css
+++ b/main.css
@@ -6,8 +6,10 @@ html {
   background-size: cover;
   background-color: #333;
   font-family: 'PT Sans', sans-serif;
-  border: 15px solid black;
+  /*border: 15px solid black;*/
 }
+
+
 
 .text-box h1 {
   font-size: 1em;
@@ -45,7 +47,7 @@ html {
 
 .text-box {
   background-color: rgba(0, 0 ,0, 0.6);
-  color: rgb(203, 203, 203);
+  color: #FFF;
   padding: 40px;
   font-size: 1.5em;
   /*margin-top: 20px;
@@ -53,11 +55,12 @@ html {
   margin-right: auto;
   position: relative;*/
   width: 50%;
-  position: fixed;
-  top: 50%;
-  left: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-height: 100%;
   /* bring your own prefixes */
-  transform: translate(-50%, -50%);
+  /*transform: translate(-50%, -50%);*/
 }
 
 .selected {
@@ -78,12 +81,12 @@ p {
 .header {
   text-transform: uppercase;
   margin-bottom: 30px;
-  text-align: center;
+  /*text-align: center;*/
   font-size: 1.25em;
 }
 
 .text-block {
-  text-align: center;
+  /*text-align: center;*/
   margin-bottom: 10px;
 }
 
@@ -118,4 +121,13 @@ ul {
 a {
   color: #FFF;
   text-decoration: none;
+}
+
+.death {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+  color: #FFF;
+  text-transform: uppercase;
+  font-size: 0.5em;
 }
