--- a/main.css
+++ b/main.css
@@ -5,55 +5,53 @@ html {
   -o-background-size: cover;
   background-size: cover;
   background-color: #333;
+  text-align: center;
+  font-size: 1.5em;
+  line-height: 1.5;
+  color: #e3e3e3;
+  text-align: center;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 1.25em;
+  font-weight: normal;
+  margin-bottom: 0;
+}
+
+h2 {
+  font-size: 1em;
+  font-weight: normal;
+  margin-top: 0;
+}
+
+p {
+  margin-bottom: 30px;
+}
+
+a{
+  color: #FFF;
+  border-bottom: 3px double;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 .text-box {
   background-color: rgba(0, 0 ,0, 0.6);
-  color: rgb(0, 255, 255);
-  padding: 40px;
-  font-size: 1.5em;
-  width: 50%;
-  position: relative;
-  top: 0;
-  margin-left: auto;
-  margin-right: auto;
-  min-height: 100%;
-  text-align: center;
-  line-height: 1.5;
+  padding: 30px;
   font-family: 'Bellefair', serif;
-}
-
-p {
-  margin: 0;
 }
 
 .section-header {
   text-transform: uppercase;
-  text-align: center;
-}
-
-.header {
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  text-align: center;
-  font-size: 1.25em;
-}
-
-.text-block {
-  margin-bottom: 30px;
-}
-
-.text-block a{
-  color: #FFF;
-  border-bottom: 3px double;
-  color: #FFF;
-  text-decoration: none;
+  margin-bottom: 10px;
 }
 
 .death {
   position: fixed;
-  left: 10px;
-  bottom: 10px;
+  left: 20px;
+  bottom: 20px;
   color: #FFF;
   text-transform: uppercase;
   font-size: 0.5em;
